force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/purecloud__CallCenterCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for the Call Center</description>
    <label>Custom Call Center Settings</label>
</CustomObject>