force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Auto_Assign_Owner__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Auto_Assign_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign Email-to-Case Owner</label>
    <type>Checkbox</type>
</CustomField>