force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Client_Event_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Client_Event_Message_Type__c</fullName>
    <inlineHelpText>Client Event Message Type enables client events through the postMessage API or Lightning Message Service.</inlineHelpText>
    <label>Client Event Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>