force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__CTI_Extension_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>purecloud__CTI_Extension_Apex_Class__c</fullName>
    <label>CTI Extension Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>