force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Default_Outbound_SMS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Default_Outbound_SMS_Country_Code__c</fullName>
    <description>Specify a default country code to show in the PureCloud for Salesforce client UI when an agent creates an outbound SMS message.</description>
    <inlineHelpText>Specify a default country code to show in the PureCloud for Salesforce client UI when an agent creates an outbound SMS message.</inlineHelpText>
    <label>Default Outbound SMS Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>