force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Embed_Scripts_in_Console__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Embed_Scripts_in_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to display scripts in a console component. Assign the PureCloudScript console component to the console apps that you want to use the component.</description>
    <inlineHelpText>Select this setting to display scripts in a console component. Assign the PureCloudScript console component to the console apps that you want to use the component.</inlineHelpText>
    <label>Embed Interaction Window</label>
    <type>Checkbox</type>
</CustomField>