force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Auto_Association__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Auto_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to automatically associate a Salesforce record with the interaction’s call log.</description>
    <inlineHelpText>Select this setting to automatically associate a Salesforce record with the interaction’s call log.</inlineHelpText>
    <label>Enable Auto Association on Navigation</label>
    <type>Checkbox</type>
</CustomField>