force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Call_History__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Call_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to enable Call History view in PureCloud for Salesforce client.</description>
    <inlineHelpText>Select this setting to enable Call History view in PureCloud for Salesforce client.</inlineHelpText>
    <label>Enable Call History</label>
    <type>Checkbox</type>
</CustomField>