force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Call_Logs__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Call_Logs__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select this setting to write and edit interaction logs in the client. Because of problems Internet Explorer has saving interaction logs, if using Internet Explorer, clear this setting.</description>
    <inlineHelpText>Select this setting to write and edit interaction logs in the client. Because of problems Internet Explorer has saving interaction logs, if using Internet Explorer, clear this setting.</inlineHelpText>
    <label>Enable Interaction Log Editing</label>
    <type>Checkbox</type>
</CustomField>