force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Chat_Messages__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Chat_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Expand Chat Notification is available after you add Notification to Client Event Types.</inlineHelpText>
    <label>Expand Chat Notification</label>
    <type>Checkbox</type>
</CustomField>