force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Client_Auto_Open_At_Acw__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Client_Auto_Open_At_Acw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically open client if after-call work is required</description>
    <label>Auto Open Client for After-Call Work</label>
    <type>Checkbox</type>
</CustomField>