force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Client_Events__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Client_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Client Events broadcasts client events through the postMessage API.</description>
    <inlineHelpText>Enable Client Events broadcasts client events through the postMessage API.</inlineHelpText>
    <label>Enable Client Events</label>
    <type>Checkbox</type>
</CustomField>