force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Dedicated_Login_Window__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Dedicated_Login_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to allow agents to login using a separate window.</description>
    <inlineHelpText>Select this setting to allow agents to login using a separate window.</inlineHelpText>
    <label>Enable Dedicated Login Window</label>
    <type>Checkbox</type>
</CustomField>