force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Disconnect_on_Tab_Close__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Disconnect_on_Tab_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disconnect an interaction when an associated Salesforce object (tab) is closed in Salesforce Console mode.</description>
    <inlineHelpText>Disconnect an interaction when an associated Salesforce object (tab) is closed in Salesforce Console mode.</inlineHelpText>
    <label>Enable Disconnect on Tab Close</label>
    <type>Checkbox</type>
</CustomField>