force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_High_Velocity_Sales__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_High_Velocity_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable High Velocity Sales</label>
    <type>Checkbox</type>
</CustomField>