force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Omni_Sync__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Omni_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to sync statuses between Omni-Channel and PureCloud for Salesforce.</description>
    <inlineHelpText>Select this setting to sync statuses between Omni-Channel and PureCloud for Salesforce.</inlineHelpText>
    <label>Enable Omni-Channel Sync</label>
    <type>Checkbox</type>
</CustomField>