force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Server_Side_Logging__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Server_Side_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable server-side logging</description>
    <inlineHelpText>Enable server-side logging</inlineHelpText>
    <label>Enable Server-Side Logging</label>
    <type>Checkbox</type>
</CustomField>