force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_SSO__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_SSO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to use an SSO identity provider for login.</description>
    <inlineHelpText>Select this setting to use an SSO identity provider for login.</inlineHelpText>
    <label>Auto Redirect to SSO</label>
    <type>Checkbox</type>
</CustomField>