force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Tab_Interaction_Sync__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Tab_Interaction_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Tab/Interaction Sync</label>
    <type>Checkbox</type>
</CustomField>