force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Enable_Workspace_Transfers__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Enable_Workspace_Transfers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to transfer in Service Cloud the main tab that an agent is viewing and any subtabs for that record that an agent has open.</description>
    <inlineHelpText>Select this setting to transfer in Service Cloud the main tab that an agent is viewing and any subtabs for that record that an agent has open.</inlineHelpText>
    <label>Enable Workspace Transfers</label>
    <type>Checkbox</type>
</CustomField>