force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>