force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Organization_Id__c</fullName>
    <label>Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>