force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Organization_Name__c</fullName>
    <description>Add the name of the Genesys Cloud organization to use the SSO identity provider for login.</description>
    <inlineHelpText>Add the name of the Genesys Cloud organization to use the SSO identity provider for login.</inlineHelpText>
    <label>Genesys Cloud Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>