force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Organization_Type__c</fullName>
    <label>Organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>