force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Salesforce_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Salesforce_Organization_Name__c</fullName>
    <label>Salesforce Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>