force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Search_External_Contacts__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Search_External_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to search for Genesys Cloud external contacts in the client when transferring interactions or making calls.</description>
    <inlineHelpText>Select this setting to search for Genesys Cloud external contacts in the client when transferring interactions or making calls.</inlineHelpText>
    <label>Search Genesys Cloud External Contacts</label>
    <type>Checkbox</type>
</CustomField>