force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Search_Queues__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Search_Queues__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select this setting to search for Genesys Cloud queues in the client when transferring interactions or making calls.</description>
    <inlineHelpText>Select this setting to search for Genesys Cloud queues in the client when transferring interactions or making calls.</inlineHelpText>
    <label>Search Genesys Cloud Queues</label>
    <type>Checkbox</type>
</CustomField>