force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Search_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Search_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this setting to search for Salesforce records in the client when transferring interactions or making calls.</description>
    <inlineHelpText>Select this setting to search for Salesforce records in the client when transferring interactions or making calls.</inlineHelpText>
    <label>Search Salesforce Records</label>
    <type>Checkbox</type>
</CustomField>