force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__SSO_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__SSO_Provider_Name__c</fullName>
    <description>Add the name of the SSO identity provider to use for login.</description>
    <inlineHelpText>Add the name of the SSO identity provider to use for login.</inlineHelpText>
    <label>SSO Identity Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>