force-app/main/default/objects/purecloud__CallCenterCustomSettings__c/fields/purecloud__Strip_Country_Codes__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Strip_Country_Codes__c</fullName>
    <description>List of country codes to strip off of a phone number in order to perform screen pop more effectively.</description>
    <label>Strip Country Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>